Update to Spring boot 2.2.4